// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query.me should not allow unauthenticated access 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "AuthenticationError",
            "http": undefined,
          },
          "locations": [
            {
              "column": 2,
              "line": 2,
            },
          ],
          "message": "UNAUTHENTICATED",
          "path": [
            "me",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Query.me should return current logged-in user 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "me": {
          "firstName": "Test",
          "lastName": null,
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
